tests/elab/fail/invalid_name1.t20
;; Test for invalid term names.
(define : 0)
